--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,11 @@ dependencies {
 	testImplementation("org.springframework.boot:spring-boot-starter-validation-test")
 	testImplementation("org.springframework.boot:spring-boot-starter-webmvc-test")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
+test {
+	useJUnitPlatform()
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
