--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pixelquest
 
+spring.datasource.url=jdbc:h2:file:./data/pixeldb
 
-spring.datasource.url=jdbc:h2:mem:pixelquestdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
